# ImageServ

./: .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  main.go  mypy.ini  pyproject.toml  requirements.txt  start.sh
app/: main.py
app/api/routes/: api.py  images.py  info.py  upload.py
app/core/: config.py
app/models/: images.py  views.py
app/services/: processing.py  utils.py
front/: package-lock.json  package.json  tailwind.config.js
front/src/: App.vue
front/src/components/: Search.vue
middleware/jwt/: jwt.go
routers/: router.go
routers/api/: upload.go
search/: main.py
search/api/: errors.py
search/api/routes/: api.py  images.py  index.py  info.py  upload.py
search/core/: config.py  events.py
search/models/: images.py  views.py
search/services/: imagehash.py  upload.py  utils.py
serv/: main.py
serv/api/routes/: api.py  images.py  info.py  upload.py
serv/core/: config.py  logging.py  settings.py
serv/models/: views.py
serv/services/: processing.py  url.py  utils.py
service/app/: request.go  response.go
service/e/: cache.go  code.go  msg.go
service/file/: file.go
service/setting/: setting.go
service/upload/: image.go
service/util/: util.go
services/file/: file.go
tests/: test_api.py  test_models.py
tests/imagehash/: test_average_hash.py  test_colorhash.py  test_crop_resistant_hash.py  test_dhash.py  test_hash_is_constant.py  test_hex_conversions.py  test_old_hex_conversions.py  test_phash.py  test_whash.py  utils.py
